--- a/src/MvcApp.Web/packages.config
+++ b/src/MvcApp.Web/packages.config
@@ -11,5 +11,6 @@
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
