--- a/src/MvcApp.Web.Dependencies/packages.config
+++ b/src/MvcApp.Web.Dependencies/packages.config
@@ -5,4 +5,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="structuremap" version="3.1.1.134" targetFramework="net45" />
+  <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net45" />
+  <package id="structuremap.web" version="3.1.0.133" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
 </packages>
