--- a/src/MvcApp.Web/MvcApp.Web.csproj
+++ b/src/MvcApp.Web/MvcApp.Web.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\css\images\status_alert.png" />
     <Content Include="Content\css\layout.css" />
     <Content Include="Content\css\images\beach.jpg" />
     <Content Include="Content\libs\basic\bootstrap\css\bootstrap-theme.css" />
@@ -130,6 +131,9 @@
     <Content Include="Content\libs\basic\bootstrap\js\bootstrap.js" />
     <Content Include="Content\libs\basic\bootstrap\js\bootstrap.min.js" />
     <Content Include="Content\libs\basic\bootstrap\js\npm.js" />
+    <Content Include="Content\libs\basic\holder\holder.js" />
+    <Content Include="Content\libs\basic\holder\holder.min.js" />
+    <Content Include="Content\libs\basic\jquery\jquery-1.12.4.js" />
     <Content Include="Content\libs\basic\require.js" />
     <Content Include="Content\libs\basic\require.min.js" />
     <Content Include="Content\libs\basic\text.js" />
@@ -213,6 +217,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Auths\Views\_ViewStart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Auths\Views\Account\_FocusLogin.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
