--- a/src/CommonFx/CommonFx.csproj
+++ b/src/CommonFx/CommonFx.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\..\lib\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -80,6 +84,7 @@
     <Compile Include="Common\Data\Provider\Memory\MemoryRepository.cs" />
     <Compile Include="Common\Ioc\CoreServiceProvider.cs" />
     <Compile Include="Common\Ioc\NullServiceLocator.cs" />
+    <Compile Include="Common\JsonHelper.cs" />
     <Compile Include="Common\MessageResult.cs" />
     <Compile Include="Common\MyConfigHelper.cs" />
     <Compile Include="Common\MyLogHelper.cs" />
@@ -91,6 +96,9 @@
     <Compile Include="Common\StringExtensions.cs" />
     <Compile Include="Common\UtilsDateTime.cs" />
     <Compile Include="Common\Web\Mvc\AreaRegistrationExtensions.cs" />
+    <Compile Include="Common\Web\Mvc\JsonExtensions.cs" />
+    <Compile Include="Common\Web\Mvc\MyControllerBase.cs" />
+    <Compile Include="Common\Web\Mvc\MyJsonResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
