--- a/src/MvcApp.Web/MvcApp.Web.csproj
+++ b/src/MvcApp.Web/MvcApp.Web.csproj
@@ -44,6 +44,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\Microsoft.AspNet.WebApi.WebHost.5.2.2\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -114,10 +127,17 @@
     <Compile Include="Areas\Demos\DemosAreaRegistration.cs" />
     <Compile Include="Areas\Demos\Models\Foo.cs" />
     <Compile Include="Areas\WeChats\Controllers\AccountController.cs" />
+    <Compile Include="Areas\WeChats\Controllers\OAuthController.cs" />
     <Compile Include="Areas\WeChats\Controllers\_DemoController.cs" />
     <Compile Include="Areas\WeChats\Controllers\HomeController.cs" />
+    <Compile Include="Areas\WeChats\Models\WeChatApi.cs" />
+    <Compile Include="Areas\WeChats\Models\WeChatApis\GetAccessToken.cs" />
+    <Compile Include="Areas\WeChats\Models\WeChatApis\GetUserInfo.cs" />
+    <Compile Include="Areas\WeChats\Models\WeChatApis\WeChatApiRegistry.cs" />
     <Compile Include="Areas\WeChats\Models\WeChatHelper.cs" />
     <Compile Include="Areas\WeChats\Models\WeChatConfig.cs" />
+    <Compile Include="Areas\WeChats\Models\WeChatOAuthApi.cs" />
+    <Compile Include="Areas\WeChats\Models\WeChatResult.cs" />
     <Compile Include="Areas\WeChats\WeChatsAreaRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -129,6 +149,9 @@
     <Content Include="Content\css\images\status_alert.png" />
     <Content Include="Content\css\layout.css" />
     <Content Include="Content\css\images\beach.jpg" />
+    <Content Include="Content\images\icon64_appwx_logo.png" />
+    <Content Include="Content\images\icon64_wx_logo.png" />
+    <Content Include="Content\images\login_01.png" />
     <Content Include="Content\libs\basic\bootstrap\css\bootstrap-theme.css" />
     <Content Include="Content\libs\basic\bootstrap\css\bootstrap-theme.min.css" />
     <Content Include="Content\libs\basic\bootstrap\css\bootstrap.css" />
@@ -147,6 +170,7 @@
     <Content Include="Content\libs\basic\text.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="MP_verify_1id3sNBNBqwkxpjw.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -242,6 +266,15 @@
   <ItemGroup>
     <Content Include="Areas\WeChats\Views\Demo\Callback.cshtml" />
     <Content Include="Areas\WeChats\Views\Demo\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\WeChats\Views\OAuth\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\WeChats\Views\OAuth\Login.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\WeChats\Views\OAuth\LoginResult.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
