--- a/src/CommonFx/CommonFx.csproj
+++ b/src/CommonFx/CommonFx.csproj
@@ -92,6 +92,11 @@
   <ItemGroup>
     <Compile Include="BaseLib\Auths\Account.cs" />
     <Compile Include="BaseLib\Auths\AppServices\IAccountAppService.cs" />
+    <Compile Include="BaseLib\WeChats\Apis\GetUserInfo.cs" />
+    <Compile Include="BaseLib\WeChats\WeChatApiRegistry.cs" />
+    <Compile Include="BaseLib\WeChats\WeChatApiRequest.cs" />
+    <Compile Include="BaseLib\WeChats\Apis\GetAccessToken.cs" />
+    <Compile Include="BaseLib\WeChats\WeChatApiResponse.cs" />
     <Compile Include="Common\AppData\FileDbHelper.cs" />
     <Compile Include="Common\AppData\TypeFilePathHelper.cs" />
     <Compile Include="Common\Data\ISimpleRepository.cs" />
@@ -124,7 +129,6 @@
   <ItemGroup>
     <Folder Include="BaseLib\Auths\Accounts\" />
     <Folder Include="BaseLib\Auths\UserContexts\" />
-    <Folder Include="BaseLib\WeChats\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
